$NetBSD: CHANGES,v 1.10800 2005/08/05 19:31:50 xtraeme Exp $

Changes to the packages collection and infrastructure in 2005:

	Updated news/inn to 2.4.1nb5 [tron 2005-06-27]
	Updated wm/wmakerconf to 2.11nb2 [tron 2005-06-27]
	Updated devel/mk-files to 20050405 [erh 2005-06-27]
	Updated x11/xscreensaver to 4.22 [wiz 2005-06-28]
	Updated x11/xscreensaver-demo to 4.22 [wiz 2005-06-28]
	Updated emulators/gxemul to 0.3.4 [xtraeme 2005-06-28]
	Updated mail/getmail to 4.3.11 [schmonz 2005-06-28]
	Added mail/spamd version 20050624 [peter 2005-06-28]
	Updated textproc/aspell to 0.60.3 [wiz 2005-06-28]
	Updated net/entropy to 0.8.3.421 [tv 2005-06-28]
	Updated net/openntpd to 3.7p1 [peter 2005-06-28]
	Updated mail/spamprobe to 1.2a [hubertf 2005-06-29]
	Updated archivers/dar to 2.2.2 [martti 2005-06-29]
	Updated wm/metacity to 2.10.2 [jmmv 2005-06-29]
	Updated x11/gdm to 2.8.0.0nb1 [jmmv 2005-06-29]
	Updated x11/gnome-panel to 2.10.2 [jmmv 2005-06-29]
	Updated graphics/eog2 to 2.10.2 [jmmv 2005-06-29]
	Updated devel/gputils to 0.13.2 [dogcow 2005-06-29]
	Updated mail/mini_sendmail to 1.3.6nb1 [is 2005-06-29]
	Updated databases/postgresql74 to 7.4.8 [wiz 2005-06-30]
	Updated security/skey to 1.1.5nb1 [minskim 2005-06-30]
	Updated sysutils/kdirstat to 2.4.3 [markd 2005-06-30]
	Updated misc/vttest to 20050107 [minskim 2005-06-30]
	Updated graphics/freetype2 to 2.1.10 [adam 2005-06-30]
	Updated lang/perl5 to 5.8.6nb5 [minskim 2005-06-30]
	Updated editors/abiword to 2.2.8 [adam 2005-06-30]
	Updated editors/abiword-plugins to 2.2.8 [adam 2005-06-30]
	Updated fonts/fontforge to 20050624 [adam 2005-06-30]
	Updated graphics/netpbm to 10.26.11 [adam 2005-06-30]
	Updated x11/xplanet to 1.2.0 [adam 2005-06-30]
	Updated graphics/gimp to 2.2.8 [adam 2005-06-30]
	Updated sysutils/gentoo to 0.11.55 [adam 2005-06-30]
	Updated x11/lesstif to 0.94.4 [adam 2005-06-30]
	Updated net/entropy to 0.9.0.429 [tv 2005-06-30]
	Updated lang/perl5 to 5.8.6nb6 [minskim 2005-06-30]