@@ -1,11 +1,11 @@
-$NetBSD: distinfo,v 1.9 2005/06/17 19:06:43 jdolecek Exp $
+$NetBSD: distinfo,v 1.10 2005/08/05 22:04:04 jdolecek Exp $
 
-SHA1 (./opera-8.01-20050615.1-static-qt.i386-en.rpm) = 58c0fd554953e0a3d93d5ca7639e8ef41eeac1d6
-RMD160 (./opera-8.01-20050615.1-static-qt.i386-en.rpm) = db07cfeb41bc7652028ff550bb6363d3c9a91173
-Size (./opera-8.01-20050615.1-static-qt.i386-en.rpm) = 6274871 bytes
-SHA1 (opera-8.01-20050615.1-static-qt.i386.freebsd-en.tar.bz2) = 056202a29328b4d6b79412afab851d0ee5a847b7
-RMD160 (opera-8.01-20050615.1-static-qt.i386.freebsd-en.tar.bz2) = 385393b235e69aff314afe6704fe96bb2ac4f70e
-Size (opera-8.01-20050615.1-static-qt.i386.freebsd-en.tar.bz2) = 5593705 bytes
-SHA1 (opera-8.01-20050615.1-static-qt-sol8-sparc-local-en.tar.bz2) = 698ec6de2ac8a7cdb287ff0cf60b2b0e2a8541e0
-RMD160 (opera-8.01-20050615.1-static-qt-sol8-sparc-local-en.tar.bz2) = adf9aeaaf742148103e3681bb737508290517f2a
-Size (opera-8.01-20050615.1-static-qt-sol8-sparc-local-en.tar.bz2) = 7026958 bytes
+SHA1 (./opera-8.02-20050727.1-static-qt.i386-en.rpm) = 0eee4da3d585019341a93aab7ddbe7a6ff71af33
+RMD160 (./opera-8.02-20050727.1-static-qt.i386-en.rpm) = ce9b14d5470fe3228ba8c8c25ea3eb8a7cd33df5
+Size (./opera-8.02-20050727.1-static-qt.i386-en.rpm) = 6299286 bytes
+SHA1 (opera-8.02-20050727.1-static-qt.i386.freebsd-en.tar.bz2) = e9f2c188e660a12117342aa45e8399b82a301435
+RMD160 (opera-8.02-20050727.1-static-qt.i386.freebsd-en.tar.bz2) = 6375368dea9b8ec9198c8d8aa62807470966423f
+Size (opera-8.02-20050727.1-static-qt.i386.freebsd-en.tar.bz2) = 5607429 bytes
+SHA1 (opera-8.02-20050727.1-static-qt-sol8-sparc-local-en.tar.bz2) = f4ef404012b10aa1acf3e9284388e00fe3985c56
+RMD160 (opera-8.02-20050727.1-static-qt-sol8-sparc-local-en.tar.bz2) = c700f60e4a41de88596cb29471647cca5902fd6e
+Size (opera-8.02-20050727.1-static-qt-sol8-sparc-local-en.tar.bz2) = 7059896 bytes
